refactor: #92 커서타입 추상화